crates/php-parser/tests/fixtures/errors/invalid_abstract_final_class.php
<?php abstract final class Foo {}